# turboinstall

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: test.sh
src/: cli.rs  main.rs
src/overlay/: ignore.rs  mod.rs
src/overlay/platform/: mod.rs
src/overlay/platform/fallback/: mod.rs
src/overlay/platform/unix/: mod.rs
src/profile/: env.rs  mod.rs  serde.rs
tests/: 00-simple.sh  01-ignore.sh  02-profile.sh  04-hook.sh
tests/hook-tree/.turboinstall/post-install/: hook.sh
tests/hook-tree/.turboinstall/pre-install/: hook.sh
tests/ignore-tree/.turboinstall/: ignore  ignore_1
tests/profile-tree/.turboinstall/: profile.env  profile.json  profile.toml  profile.yaml
