[package]
name = "turboinstall"
version = "0.3.0"
edition = "2021"
authors = ["threadexio <pzarganitis@gmail.com>"]
description = "A simple tool for overlaying directory trees on top of each other"
license = "MIT"
repository = "https://github.com/threadexio/turboinstall"
readme = "README.md"

autotests = false
include = ["src/**/*", "Cargo.toml"]

[dependencies]
anyhow = "1.0"
log = "0.4"
fern = { version = "0.6" }
clap = { version = "4.0", features = ["cargo", "derive"] }
colored = { version = "2.0" }
atty = { version = "0.2" }
lazy_static = { version = "1.4" }
walkdir = "2"
regex = { version = "1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = [
	"fs",
	"user",
	"zerocopy",
	"ioctl",
] }
